# xrnavigation.io

./: .gitignore  hugo.toml  package-lock.json  package.json  tsconfig.json
archetypes/: audiom-embed.md
content/: 404-2.md  _index.md  about-audiom.md  about.md  accessibility-statement.md  acr.md  asa625.md  atia.md  audiom-airbus-lopa-a320-200-diagram.md  audiom-airbus-lopa-a320-200-seat-map.md  audiom-airplane-aa-747-seatmap.md  audiom-bovine-manus-diagram.md  audiom-covid-map.md  audiom-create-x-demo-day-map-2024.md  audiom-demo-form.md  audiom-demo.md  audiom-human-skeleton-diagram.md  audiom-mean-sea-level-rise-map-fall-2024.md  audiom-neighborhood-demo.md  audiom-numbers.md  audiom-rat-dissection-diagram.md  audiom-sheep-brain-diagram.md  audiom-sole-source-justification.md  audiom-tvm-map-1.md  audiom-tvm-map-2.md  audiom-tvm-map-3.md  audiom-tvm-map-4.md  audiom-wisconsin-geological-survey-quaternary-map.md  blog.md  brandon-keith-biggs.md  capability-statement.md  case-study-vrate-expo-2024.md  case-study-wisconsin-geological-survey.md  contact.md  corporate-campuses.md  covid-statistic-text-map-showing-total-cases-over-washington-oregon-and-idaho.md  csun-exhibit-hall-map-2024.md  csun.md  dif25.md  eclipse24.md  (+39 more)
data/: broken-links.json  custom-css-ch80.css  custom-css-focus-styles.css  custom-js-astra.js  (+4 more)
tools/chunk-compare/: pyproject.toml
tools/chunk-compare/src/chunk_compare/: __init__.py  chunker.py  matcher.py  models.py  text_utils.py
tools/chunk-compare/tests/: conftest.py  strategies.py  test_chunker.py  test_integration.py  test_matcher.py
(+217 files in other folders)
